fix: revert the old code for repository